update b plus tree demo